--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -275,10 +275,11 @@ header {
     rgba(71, 9, 79, 0.05) 41.83%,
     rgba(241, 244, 253, 0.07) 82.52%
   );
+
   h4 {
-    font-size: 2.3rem;
+    font-size: 2.5rem;
     font-weight: bold;
-    margin-top: 150px;
+    margin-top: 20%;
   }
 }
 
@@ -304,7 +305,7 @@ header {
   display: flex;
   align-items: center;
   gap: 15px;
-  padding: 20px;
+  padding: 20px 0;
 }
 .Box {
   background-color: #fff;
@@ -485,8 +486,9 @@ footer {
   height: 350px;
   width: 550px;
   background-color: #fff;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   margin: 0 auto;
+  border-radius: 8px;
 }
 .Stars {
   padding: 12px 0;
