--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -86,6 +86,9 @@ header {
     rgba(71, 9, 79, 0.05) 41.83%,
     rgba(241, 244, 253, 0.07) 82.52%
   );
+  @media (max-width: 993px) {
+    height: 190vh;
+  }
 
   .content {
     display: flex;
