--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -94,9 +94,12 @@ header {
     display: flex;
     flex-direction: column;
     gap: 25px;
+    @media (max-width: 993px) {
+      text-align: center;
+    }
   }
   h1 {
-    font-size: 3.5rem;
+    font-size: 2.5rem;
     margin-bottom: 1.2rem;
     font-weight: 600;
     line-height: 1.3;
@@ -128,15 +131,17 @@ header {
     }
   }
   .Images {
+    display: flex;
+    justify-content: space-evenly;
     img {
-      width: 200px;
+      width: 40%;
     }
   }
   .mob_img {
     position: relative;
     img {
       position: absolute;
-      width: 700px;
+      width: 100%;
     }
     .Img_one {
       z-index: 999;
@@ -156,13 +161,12 @@ header {
     justify-content: space-between;
   }
   .Box {
-    padding: 2.5rem 2.5rem;
+    padding: 18px;
     border: 1px solid #eee;
     text-align: center;
-    width: 250px;
-    margin: 20px;
     border-radius: 10px;
     transition: transform 0.3s;
+    margin: 14px 0;
 
     &:hover {
       transform: translateY(-1.5rem) scale(1.03);
@@ -407,10 +411,14 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 15px;
+  gap: 12px;
   .Footer_menu_item {
     color: #0b0f19;
     font-size: 1.4rem;
+    @media (max-width: 993px) {
+      font-size: 0.8rem;
+    }
+
     &:hover {
       color: #6267f0;
     }
@@ -423,6 +431,9 @@ footer {
     width: 180px;
     margin-top: 2rem;
     margin-inline-start: 1rem;
+    @media (max-width: 993px) {
+      width: 150px;
+    }
   }
 }
 
@@ -431,7 +442,7 @@ footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 20px;
+  gap: 15px;
   margin-top: 3rem;
 
   .icon {
