--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -87,7 +87,7 @@ header {
     rgba(241, 244, 253, 0.07) 82.52%
   );
   @media (max-width: 993px) {
-    height: 190vh;
+    height: 170vh;
   }
 
   .content {
@@ -192,10 +192,19 @@ header {
     }
   }
   .Feature_items {
+    @media (max-width: 993px) {
+      text-align: center;
+    }
+
     .item_Box {
       .img {
         padding: 10px 0;
       }
+    }
+  }
+  .Feature_content {
+    @media (max-width: 993px) {
+      text-align: center;
     }
   }
 }
