--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -77,6 +77,11 @@ header {
   overflow: hidden;
   background: radial-gradient(116.18% 118% at 50% 100%, rgba(12, 13, 107, 0.1) 0%, rgba(71, 9, 79, 0.05) 41.83%, rgba(241, 244, 253, 0.07) 82.52%);
 }
+@media (max-width: 993px) {
+  .Head {
+    height: 120vh;
+  }
+}
 .Head .content {
   display: flex;
   flex-direction: column;
@@ -183,11 +188,25 @@ header {
   padding: 10px 0;
 }
 @media (max-width: 993px) {
+  .App_Features .Feature_items .item_Box .title h3 {
+    font-size: 1rem;
+  }
+}
+@media (max-width: 993px) {
+  .App_Features .Feature_items .item_Box .title p {
+    font-size: 0.7rem;
+  }
+}
+@media (max-width: 993px) {
   .App_Features .Feature_content {
     text-align: center;
   }
 }
-
+@media (max-width: 993px) {
+  .App_Features h2 {
+    font-size: 1rem;
+  }
+}
 .Money_Transfer {
   margin: 2rem 0;
 }
