--- a/Assets/css/style.scss
+++ b/Assets/css/style.scss
@@ -85,6 +85,9 @@ header {
     rgba(71, 9, 79, 0.05) 41.83%,
     rgba(241, 244, 253, 0.07) 82.52%
   );
+  @media (max-width: 993px) {
+    height: 120vh;
+  }
 
   .content {
     display: flex;
@@ -196,12 +199,31 @@ header {
       .img {
         padding: 10px 0;
       }
+      .title {
+        h3 {
+          @media (max-width: 993px) {
+            font-size: 1rem;
+          }
+        }
+        p {
+          @media (max-width: 993px) {
+            font-size: 0.7rem;
+          }
+        }
+      }
     }
   }
   .Feature_content {
     @media (max-width: 993px) {
       text-align: center;
     }
+  }
+  h2 {
+    @media (max-width: 993px) {
+      font-size: 1rem;
+    }
+  }
+  p {
   }
 }
 
